add error message box when no ESP is found

--- a/mxbootrepair.ui
+++ b/mxbootrepair.ui
@@ -29,7 +29,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="startPage">
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -272,6 +272,9 @@
            <widget class="QRadioButton" name="grubEspButton">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="toolTip">
+             <string>EFI System Partition</string>
             </property>
             <property name="text">
              <string>ESP</string>
@@ -530,7 +533,9 @@
         <string>Apply</string>
        </property>
        <property name="icon">
-        <iconset theme="dialog-ok"/>
+        <iconset theme="dialog-ok">
+         <normaloff/>
+        </iconset>
        </property>
        <property name="shortcut">
         <string/>
