--- a/mxbootrepair.ui
+++ b/mxbootrepair.ui
@@ -400,6 +400,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
        <property name="toolTip">
         <string>About this application</string>
        </property>
@@ -415,7 +418,7 @@
         <string>Alt+B</string>
        </property>
        <property name="autoDefault">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -468,6 +471,9 @@
         <string>Alt+H</string>
        </property>
        <property name="autoDefault">
+        <bool>true</bool>
+       </property>
+       <property name="default">
         <bool>false</bool>
        </property>
       </widget>
@@ -517,7 +523,10 @@
         <string>Alt+N</string>
        </property>
        <property name="autoDefault">
-        <bool>false</bool>
+        <bool>true</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -544,7 +553,7 @@
         <string/>
        </property>
        <property name="autoDefault">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="default">
         <bool>false</bool>
