--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mxbootrepair</class>
- <widget class="QDialog" name="mxbootrepair">
+ <class>MainWindow</class>
+ <widget class="QDialog" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -612,7 +612,7 @@
   <connection>
    <sender>buttonCancel</sender>
    <signal>pressed()</signal>
-   <receiver>mxbootrepair</receiver>
+   <receiver>MainWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
