--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,7 +45,7 @@
           <string>MX Boot Repair is a utility that can be used to reinstall GRUB bootloader on the ESP (EFI System Partition), MBR (Master Boot Record) or root partition. It provides the option to reconstruct the GRUB configuration file and to back up and restore MBR or PBR (root).</string>
          </property>
          <property name="textFormat">
-          <enum>Qt::TextFormat::PlainText</enum>
+          <enum>Qt::PlainText</enum>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
@@ -333,7 +333,7 @@
        <item>
         <widget class="QLabel" name="outputLabel">
          <property name="textFormat">
-          <enum>Qt::TextFormat::RichText</enum>
+          <enum>Qt::RichText</enum>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
@@ -346,7 +346,7 @@
           <bool>false</bool>
          </property>
          <property name="textDirection">
-          <enum>QProgressBar::Direction::TopToBottom</enum>
+          <enum>QProgressBar::TopToBottom</enum>
          </property>
         </widget>
        </item>
@@ -357,7 +357,7 @@
    <item row="2" column="0" colspan="3">
     <layout class="QGridLayout" name="buttonBar" columnstretch="0,0,0,0,0,0,0,0">
      <property name="sizeConstraint">
-      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+      <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="leftMargin">
       <number>0</number>
@@ -383,7 +383,7 @@
         </sizepolicy>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::FocusPolicy::StrongFocus</enum>
+        <enum>Qt::StrongFocus</enum>
        </property>
        <property name="toolTip">
         <string>About this application</string>
@@ -518,10 +518,7 @@
         <string>Apply any changes</string>
        </property>
        <property name="text">
-        <string>Apply</string>
-       </property>
-       <property name="icon">
-        <iconset theme="dialog-ok"/>
+        <string>Next</string>
        </property>
        <property name="shortcut">
         <string/>
