--- a/src/gui/images.qrc
+++ b/src/gui/images.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>icons/logo.svg</file>
+        <file>../../icons/logo.svg</file>
     </qresource>
 </RCC>
